# KeynoteMCP

./: .gitignore  LICENSE  Makefile  PYDANTIC_INTEGRATION.md  README.md  config.env.example  pyproject.toml  requirements.txt
examples/: demo_usage.py
src/: ai_client.py  ai_client_pydantic.py  keynote_mcp_server.py  keynote_mcp_server_pydantic.py  models.py
tests/: __init__.py  test_mathematical_tools.py  test_pydantic_models.py
